[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-versions-manager"
version = "0.0.2"
description = "A delightful Python package for managing LLM prompts with versioning and i18n-style string management"
readme = "README.md"
authors = [
    { name = "Pablo Schaffner", email = "pablo@puntorigen.com" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["prompt", "llm", "management", "versioning", "i18n"]

[project.urls]
"Homepage" = "https://github.com/puntorigen/prompt-versions-manager"
"Bug Tracker" = "https://github.com/puntorigen/prompt-versions-manager/issues"
